	PR c++/28148 	* varasm.c (output_constant): Give the front end another chance to 	expand constants, after stripping NOPs.

PR c++/28148
	* g++.dg/init/ptrmem3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115919 138bc75d-0d04-0410-961f-82ee72b054a4