gcc/testsuite/g++.dg/init/ptrmem3.C
@@ -1,0 +1,8 @@
+// PR c++/28148
+
+struct foo {
+public:
+  virtual int bar(int);
+};
+
+void (foo::*__Virtual__foo__Var1)() = (void (foo::*)())(&foo::bar);
